load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "sidebar",
    srcs = ["sidebar.component.ts"],
    declaration = True,
    source_map = True,
    tsconfig = "//web/poc/ui:tsconfig",
    deps = [
        "//web:node_modules/@angular/common",
        "//web:node_modules/@angular/core",
        "//web/poc/gcsapi",
        "//web/poc/geometry",
        "//web/poc/ui/app/services",
    ],
)
